--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-farm",
+  "name": "INFRACOM",
   "version": "1.0.0",
-  "description": "SUGOMA SUS",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
